Fixed issue with header being cut off

--- a/css/main.scss
+++ b/css/main.scss
@@ -164,6 +164,9 @@ p {
 }
 
 /* Navigation */
+header {
+  background-color: $white;
+}
 
 .logo {
   margin-left: 15px;
